--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,7 +43,12 @@
 
   <article class="aboutDescription container m-5">
     <h2 class="text-center m-3">Your best work buddy</h2>
-    <p class="m-3"></p>
+    <p class="m-3">Hello this is Arshdeep. A student and a webdeveloper. I am an
+      emerging developer. Make your dreams come true with my skills.
+    </p>
+    <p class="m-3">Share your proposals with me will suggest you the best
+      possiblities for that.
+    </p>
   </article>
 
   <article class="recentWork container m-5">
