--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,6 +6,8 @@
   </div>
   <div>
     <h3>About Me || Arshdeep Kaur</h3>
-    <p>Hello</p>
+    <p>Hello this is Arshdeep. A student and a webdeveloper. I am an emerging
+      developer. Make your dreams come true with my skills. Share your proposals
+      with me will suggest you the best possiblities for that.</p>
   </div>
 </article>
