added comments and cited resources
added important comments and added the links of bootstrap elements i have used

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <main>
   <h1 class="pageDescriptor m-5 text-center">{{title}}</h1>
   <article
-    class="banner container m-5 d-flex align-items-center justify-content-center"
+    class="banner container m-5 d-flex align-items-center justify-content-center container-fluid"
   >
     <div class="bannerContent">
       <h1 class="pageDescriptor">{{title}}</h1>
