--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,6 +13,7 @@
   <body>
     <header class="header">
       <div class="logo"><h2>Logo</h2></div>
+      {{!-- bootstrap nav element --}}
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
